hello thjis works now pls dad love me

--- a/Form1.resx
+++ b/Form1.resx
@@ -57,4 +57,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="label1.Text" xml:space="preserve">
+    <value>By clicking START, the server rp cache will be cleared so use this at ur own risk
+By clicking CLEAR, the server rp cache will also be cleared
+For normal users this shouldnt be a problem, but if ur a nerd tampering
+with the rps, this is something to consider</value>
+  </data>
 </root>
